--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+} */
 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landing-contents-container {
+  width: 40vw;
+  margin-top: 20vh;
+}
+
+h1 {
+  font-size: 3em;
+  margin-bottom: 0;
+}
+
+button {
+  color: #282c34;
+  padding: 20px 25px;
+  font-weight: bold;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 5px;
+  margin-top: 35px;
+}
+
+.feature-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 3rem;
+  padding: 150px;
+}
+
+.card img {
+  margin-left: -20px;
+}
+
+h2 {
+  margin-bottom: 0;
+  letter-spacing: 2px;
+}
+
+.card p {
+  line-height: 1.3rem;
+  color: grey;
 }
